--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
-    "pg-promise": "^10.10.2"
+    "jsbarcode": "^3.11.4",
+    "pg-promise": "^10.10.2",
+    "xmldom": "^0.6.0"
   },
   "apidoc": {
     "title": "Express Microservice Docs",
-    "url": "https://api.example.com/v1"
+    "url": "http://localhost:5003/v1"
   }
 }
