--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-restful-boilerplate",
+  "name": "retail-product-restful-api",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -24,7 +24,7 @@
     "xmldom": "^0.6.0"
   },
   "apidoc": {
-    "title": "Express Microservice Docs",
-    "url": "http://localhost:5003/v1"
+    "title": "Simple Retail Product API",
+    "url": "http://localhost:5003"
   }
 }
