--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
+    "joi": "^17.5.0",
     "jsbarcode": "^3.11.4",
     "pg-promise": "^10.10.2",
     "xmldom": "^0.6.0"
